--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <body>
 <div class="backgroundvideo1" style="position: fixed; z-index: -99; width: 100%; height: 100%">
-  <iframe frameborder="0" height="100%" width="100%" 
-    src="https://www.youtube.com/embed/zA3eTLvmN1k?autoplay=1&controls=0&showinfo=0&autohide=1">
+  <iframe frameborder="0" height="100%" width="100%"
+    src="https://www.youtube.com/embed/CEg8gF3moC4?autoplay=1&controls=0&showinfo=0&autohide=1">
   </iframe>
 </div>
        <div id="center">
@@ -28,7 +28,5 @@
 		<pre><a href="https://github.com/byreqz/youtube-landingpage">back to Github</a></pre>
 		</div>
         </div>
-</body>  
+</body>
 </html>
-
-
